--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "devDependencies": {
     "@types/node": "^16.11.11",
     "typescript": "^4.5.2"
+  },
+  "dependencies": {
+    "@types/pathfinding": "^0.0.5",
+    "pathfinding": "^0.4.18"
   }
 }
